fix scrollbar

--- a/style/main.less
+++ b/style/main.less
@@ -716,15 +716,6 @@ p pre code, li pre code {
     border: none;
     padding: 0;
 }
-pre::-webkit-scrollbar, .highlight::-webkit-scrollbar, ::-webkit-scrollbar {
-    height: .5em;
-    background: rgba(255, 255, 255, 0.15);
-}
-pre::-webkit-scrollbar-thumb:horizontal, .highlight::-webkit-scrollbar-thumb:horizontal, ::-webkit-scrollbar-thumb:horizontal {
-    background: rgba(255, 255, 255, 0.2);
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-}
 .highlight code {
     background: #000;
 }
